why wont you commit

--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,1 +1,5 @@
-test
+<h1>{{ article.title }}</h1>
+<small>{{ article.author }}</small>
+<time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%Y-%m-%d' }}</time>
+<img src="{{ article.image | img_url: 'large' }}" alt="">
+<div>{{ article.content }}</div>
