why wont you commit

--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,5 +1,136 @@
-<h1>{{ article.title }}</h1>
-<small>{{ article.author }}</small>
-<time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%Y-%m-%d' }}</time>
-<img src="{{ article.image | img_url: 'large' }}" alt="">
-<div>{{ article.content }}</div>
+<article itemscope itemtype="https://schema.org/BlogPosting">
+  {% for block in section.blocks %}
+    {% case block.type %}
+      {% when 'article_title' %}
+      <h1 itemprop="headline">{{ article.title }}</h1>
+      {% when 'author_title' %}
+      {% if section.settings.enable_author %}
+        <small>
+          {{ article.author }}
+        </small>
+      {% endif %}
+      {% when 'article_publication_date' %}
+      <time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%Y-%m-%d' }}</time>
+      {% when 'featured_image' %}
+      <img
+        class="mx-auto"
+        src="{{ article.image | img_url: 'large' }}"
+        alt="">
+      {% when 'article_content' %}
+      <div>{{ article.content }}</div>
+  {% else %}
+    {% endcase %}
+  {% endfor %}
+
+</article>
+
+{% if blog.comments_enabled? %}
+  <div id="comments" class="my-8">
+    {% if article.comments_count > 0 %}
+      <div class="my-8">
+        <h1>see comments here below this is soo slow</h1>
+        {% paginate article.comments by 3 %}
+          {% for commentingle in article.comments %}
+            <div class="my-20">
+              <h3>{{ commentingle.author }}</h3>
+              <p>{{ commentingle.content }}</p>
+            </div>
+          {% endfor %}
+          {% if paginate.pages > 1 %}
+            {{ paginate | default_pagination }}
+          {% endif %}
+        {% endpaginate %}
+      </div>
+    {% else %}
+      <p>no comments</p>
+    {% endif %}
+  </div>
+
+  <div id="comment_form" class="my-10">
+    {% form 'new_comment', article %}
+      <div>
+        <div>
+          <label for="comment_author">Name</label>
+          <input
+            type="text"
+            name="comment[author]"
+            id="comment_author"
+            class="w-300 bg-gray-100 border"
+            required>
+        </div>
+        <div>
+          <label for="comment_email">Email</label>
+          <input
+            type="text"
+            name="comment[email]"
+            id="comment_email"
+            class="w-300 bg-gray-100 border"
+            required>
+        </div>
+        <div style="text-align: center;">
+          <label for="comment_content" style="margin: auto;">Comment</label>
+          <textarea
+            name="comment[body]"
+            id="comment_content"
+            class="w-800 h-400 bg-gray-100 border"
+            style="width: 800px; height: 200px;"
+            required></textarea>
+        </div>
+      </div>
+      <div>
+        <input
+          type="submit"
+          value="Post comment"
+          class="bg-green-50 px-10 py-5">
+      </div>
+    {% endform %}
+  </div>
+{% endif %}
+
+
+
+{% schema %}
+  {
+    "name": "Template Article",
+    "class": "items-center text-center py-7 h-screen flex-column",
+    "settings": [
+      {
+        "type": "checkbox",
+        "id": "enable_author",
+        "default": true,
+        "label": "Display Author Name"
+      }, {
+        "type": "checkbox",
+        "id": "enable_publish_date",
+        "default": true,
+        "label": "Display Publish Date"
+      }
+    ],
+    "blocks": [
+      {
+        "type": "article_title",
+        "name": "Title",
+        "limit": 1
+      },
+      {
+        "type": "author_title",
+        "name": "Author",
+        "limit": 1
+      },
+      {
+        "type": "article_publication_date",
+        "name": "Date",
+        "limit": 1
+      },
+      {
+        "type": "featured_image",
+        "name": "Thumbnail",
+        "limit": 1
+      }, {
+        "type": "article_content",
+        "name": "Content",
+        "limit": 1
+      }
+    ]
+  }
+{% endschema %}
